# rustidy

./: .gitignore  .rustidy.toml  Cargo.toml  README.md
rustidy/: Cargo.toml
rustidy-ast/: Cargo.toml
rustidy-ast-literal/: Cargo.toml
rustidy-ast-literal/src/: byte.rs  byte_string.rs  c_string.rs  char.rs  escape.rs  float.rs  ident.rs  int.rs  lib.rs  lifetime.rs  raw_byte_string.rs  raw_c_string.rs  raw_string.rs  string.rs  suffix.rs  token.rs
rustidy-ast-literal/src/ident/: ident_or_keyword.rs
rustidy-ast-token/: Cargo.toml
rustidy-ast-tokens/: Cargo.toml
rustidy-ast-tokens/src/: lib.rs
rustidy-ast-util/: Cargo.toml
rustidy-ast-util/src/: at_least.rs  delimited.rs  follows.rs  ident.rs  lib.rs  line.rs  longest.rs  not_follows.rs  punct.rs  whitespace.rs
rustidy-ast-util/src/ident/: ident_or_keyword.rs
rustidy-ast/src/: attr.rs  expr.rs  item.rs  lib.rs  lifetime.rs  pat.rs  path.rs  shebang.rs  stmt.rs  token.rs  ty.rs  util.rs  vis.rs  with_attrs.rs
rustidy-ast/src/attr/: meta.rs  with.rs
rustidy-ast/src/expr/: with_block.rs  without_block.rs
rustidy-ast/src/expr/with_block/: block.rs  match_.rs
rustidy-ast/src/expr/without_block/: array.rs  async_block.rs  await_.rs  break_.rs  call.rs  closure.rs  continue_.rs  field.rs  grouped.rs  index.rs  macro_invocation.rs  operator.rs  path.rs  range.rs  return_.rs  struct_.rs  tuple.rs  tuple_indexing.rs  underscore.rs
rustidy-ast/src/item/: const_.rs  enum_.rs  extern_block.rs  extern_crate.rs  function.rs  implementation.rs  macro_.rs  macro_rules.rs  mod_.rs  static_.rs  struct_.rs  trait_.rs  type_alias.rs  union.rs  use_.rs
rustidy-ast/src/pat/: range.rs
rustidy-ast/src/ty/: array.rs  bare_function.rs  path.rs  pointer.rs  qualified.rs  slice.rs  tuple.rs
rustidy-bin/: Cargo.toml
rustidy-bin/src/: args.rs  main.rs
rustidy-cargo/: Cargo.toml
rustidy-cargo/src/: args.rs  main.rs
rustidy-format/: Cargo.toml
rustidy-format/src/: config.rs  lib.rs  output.rs  replacement.rs  str.rs  tag.rs  vec.rs  whitespace.rs
rustidy-macros/: Cargo.toml
rustidy-macros/src/: format.rs  formattable.rs  lib.rs  parse.rs  parse_error.rs  parse_recursive.rs  print.rs  util.rs
rustidy-parse/: Cargo.toml
rustidy-parse/src/: error.rs  lib.rs  recursive.rs  tag.rs  whitespace.rs
rustidy-print/: Cargo.toml
rustidy-print/src/: lib.rs  output.rs  str.rs  whitespace.rs
rustidy-tests/: Cargo.toml
rustidy-tests/benches/: format.rs  parse.rs  print.rs
rustidy-tests/tests/: format.rs  format_output.rs  parse.rs  parse_error.rs  whitespace.rs
rustidy-util/: Cargo.toml
rustidy-util/src/: arena.rs  ast_pos.rs  ast_range.rs  ast_str.rs  config.rs  lib.rs  oob.rs  parser_pos.rs  parser_range.rs  parser_str.rs  replacement.rs  whitespace.rs
rustidy/benches/: format.rs  parse.rs  print.rs
rustidy/src/: arena.rs  args.rs  ast.rs  format.rs  lib.rs  main.rs  parser.rs  print.rs  replacement.rs  str.rs
rustidy/src/ast/: at_least.rs  attr.rs  delimited.rs  expr.rs  ident.rs  item.rs  lifetime.rs  line.rs  longest.rs  pat.rs  path.rs  punct.rs  shebang.rs  stmt.rs  token.rs  ty.rs  vis.rs  whitespace.rs  with_attrs.rs
rustidy/src/ast/expr/: with_block.rs  without_block.rs
rustidy/src/ast/ident/: ident_or_keyword.rs  keyword.rs
rustidy/src/ast/item/: const_.rs  enum_.rs  extern_block.rs  extern_crate.rs  function.rs  implementation.rs  macro_.rs  macro_rules.rs  mod_.rs  static_.rs  struct_.rs  trait_.rs  type_alias.rs  union.rs  use_.rs
rustidy/src/ast/pat/: range.rs
rustidy/src/ast/ty/: array.rs  bare_function.rs  path.rs  pointer.rs  qualified.rs  slice.rs  tuple.rs
rustidy/src/format/: config.rs
rustidy/src/parser/: error.rs  recursive.rs  str.rs
rustidy/tests/: format.rs  format_output.rs  parse.rs  parse_error.rs  whitespace.rs
rustidy/tests/format/ArrayExpression/: input.rs  output.rs
rustidy/tests/format/Configuration/: input.rs  output.rs
rustidy/tests/format/Crate/: input.rs
rustidy/tests/format/Expression/: input.rs  output.rs
rustidy/tests/format/Function/: input.rs  output.rs
rustidy/tests/format/MacroInvocation/: output.rs
rustidy/tests/format/Struct/: input.rs  output.rs
rustidy/tests/format/StructExpression/: input.rs
rustidy/tests/format/UseDeclaration/: output.rs
rustidy/tests/parse-error/c_string_literal_byte_nul/: output.txt
rustidy/tests/parse-error/c_string_literal_unicode_nul/: output.txt
rustidy/tests/parse-error/char_literal_outside_range/: input.rs
rustidy/tests/parse-error/inner_attr_no_attr/: output.txt
rustidy/tests/parse-error/lifetime_whitespace/: output.txt
rustidy/tests/parse-error/match_missing_comma_after_without_block/: input.rs  output.txt
rustidy/tests/parse-error/whitespace_large_comment/: input.rs  output.txt
rustidy/tests/parse-error/whitespace_no_comment_end/: output.txt
rustidy/tests/parse/AssociatedItem/: output.json
rustidy/tests/parse/ConstantItem/: input.rs  output.json
rustidy/tests/parse/DeclMacro/: input.rs  output.json
rustidy/tests/parse/Enumeration/: output.json
rustidy/tests/parse/Expression/: input.rs  output.json
rustidy/tests/parse/ExternBlock/: output.json
rustidy/tests/parse/ExternCrate/: output.json
rustidy/tests/parse/Function/: input.rs  output.json
rustidy/tests/parse/Implementation/: output.json
rustidy/tests/parse/InnerAttribute/: output.json
rustidy/tests/parse/Item/: input.rs  output.json
rustidy/tests/parse/Literal/: output.json
rustidy/tests/parse/MacroInvocation/: input.rs  output.json
rustidy/tests/parse/MacroRulesDefinition/: output.json
rustidy/tests/parse/MetaItem/: output.json
rustidy/tests/parse/Module/: input.rs  output.json
rustidy/tests/parse/OuterAttribute/: output.json
rustidy/tests/parse/Pattern/: output.json
rustidy/tests/parse/Struct/: input.rs  output.json
rustidy/tests/parse/Type/: input.rs  output.json
rustidy/tests/parse/TypeAlias/: output.json
rustidy/tests/parse/Union/: output.json
rustidy/tests/parse/UseDeclaration/: input.rs  output.json
rustidy/tests/parse/Visibility/: output.json
tests/format/Crate/: input.rs  (+1 more)
(+104 files in other folders)
