cargo-features = ["trim-paths"]

[workspace]

members = [
	"rustidy",
	"rustidy-ast",
	"rustidy-ast-literal",
	"rustidy-ast-tokens",
	"rustidy-ast-util",
	"rustidy-bin",
	"rustidy-cargo",
	"rustidy-format",
	"rustidy-macros",
	"rustidy-parse",
	"rustidy-print",
	"rustidy-tests",
	"rustidy-util",
]
resolver = "2"

[workspace.package]
description = "Rust-tidy formatter"
edition     = "2024"
license     = "MIT OR Apache-2.0"
publish     = ["filipejr"]
repository  = "https://github.com/zenithsiz/rustidy"
version     = "0.1.10"

[workspace.dependencies]

# Workspace
rustidy             = { path = "rustidy" }
rustidy-ast         = { path = "rustidy-ast" }
rustidy-ast-literal = { path = "rustidy-ast-literal" }
rustidy-ast-tokens  = { path = "rustidy-ast-tokens" }
rustidy-ast-util    = { path = "rustidy-ast-util" }
rustidy-bin         = { path = "rustidy-bin" }
rustidy-cargo       = { path = "rustidy-cargo" }
rustidy-format      = { path = "rustidy-format" }
rustidy-macros      = { path = "rustidy-macros" }
rustidy-parse       = { path = "rustidy-parse" }
rustidy-print       = { path = "rustidy-print" }
rustidy-tests       = { path = "rustidy-tests" }
rustidy-util        = { path = "rustidy-util" }

app-error        = { git = "https://github.com/Zenithsiz/app-error", rev = "2ff4c7b54f57e189042171718032fbb27eea18d8" }
arcstr           = "1.2.0"
assert-json-diff = "2.0.2"
cargo_metadata   = "0.23.1"
clap             = "4.5.57"
clap-cargo       = "0.18.3"
convert_case     = "0.11.0"
darling          = "0.23.0"
derive_more      = "2.1.1"
difference       = "2.0.0"
either           = "1.15.0"
extend           = "1.2.0"
flate2           = "1.1.9"
itertools        = "0.14.0"
proc-macro2      = "1.0.106"
quote            = "1.0.44"
ref-cast         = "1.0.25"
replace_with     = "0.1.8"
serde            = "1.0.228"
serde_json       = "1.0.149"
strum            = "0.27.2"
syn              = "2.0.114"
toml             = "0.9.8"
tracing          = "0.1.44"
unicode-ident    = "1.0.22"
zutil-logger     = { git = "https://github.com/Zenithsiz/zutil", rev = "17d00574bb89000e565d7831833e946fd1841fc0" }

[workspace.lints]

rust.unexpected_cfgs = { check-cfg = ['cfg(rust_analyzer)'], level = "warn" }

rust.unused_crate_dependencies = "warn"

clippy.nursery  = { level = "warn", priority = -1 }
clippy.pedantic = { level = "warn", priority = -1 }

clippy.undocumented_unsafe_blocks = "warn"
clippy.unnecessary_self_imports   = "warn"

# Style
clippy.match_bool         = "allow"
clippy.option_if_let_else = "allow"
clippy.similar_names      = "allow"
clippy.single_match_else  = "allow"
clippy.struct_field_names = "allow"

# Misc
clippy.empty_enums                  = "allow"
clippy.items-after-statements       = "allow"
clippy.unnecessary_debug_formatting = "allow"
clippy.wildcard_imports             = "allow"

# TODO:
clippy.large_enum_variant = "allow"
clippy.missing_errors_doc = "allow"
clippy.missing_panics_doc = "allow"
clippy.too_many_lines     = "allow"

[profile.profiling]
inherits = "release"
debug    = "line-tables-only"

[profile.release]
trim-paths = "all"
strip      = true
