cargo-features = ["trim-paths"]

[workspace]

members = [
	"rustidy",
	"rustidy-ast",
	"rustidy-ast-literal",
	"rustidy-ast-token",
	"rustidy-ast-util",
	"rustidy-format",
	"rustidy-macros",
	"rustidy-parse",
	"rustidy-print",
	"rustidy-util",
]
resolver = "2"

[workspace.package]
description = "Rustidy formatter"
edition     = "2024"
license     = "MIT OR Apache-2.0"
publish     = true
repository  = "https://github.com/zenithsiz/rustidy"
version     = "0.1.0"

[workspace.dependencies]

# Workspace
ast         = { package = "rustidy-ast", path = "rustidy-ast", version = "0.1.0" }
ast-literal = { package = "rustidy-ast-literal", path = "rustidy-ast-literal", version = "0.1.0" }
ast-token   = { package = "rustidy-ast-token", path = "rustidy-ast-token", version = "0.1.0" }
ast-util    = { package = "rustidy-ast-util", path = "rustidy-ast-util", version = "0.1.0" }
format      = { package = "rustidy-format", path = "rustidy-format", version = "0.1.0" }
macros      = { package = "rustidy-macros", path = "rustidy-macros", version = "0.1.0" }
parse       = { package = "rustidy-parse", path = "rustidy-parse", version = "0.1.0" }
print       = { package = "rustidy-print", path = "rustidy-print", version = "0.1.0" }
rustidy     = { path = "rustidy", version = "0.1.0" }
util        = { package = "rustidy-util", path = "rustidy-util", version = "0.1.0" }

app-error        = "0.1.0"
arcstr           = "1.2.0"
assert-json-diff = "2.0.2"
cargo_metadata   = "0.23.1"
clap             = "4.5.60"
clap-cargo       = "0.18.3"
convert_case     = "0.11.0"
darling          = "0.23.0"
derive_more      = "2.1.1"
difference       = "2.0.0"
either           = "1.15.0"
extend           = "1.2.0"
flate2           = "1.1.9"
itertools        = "0.14.0"
proc-macro2      = "1.0.106"
quote            = "1.0.44"
ref-cast         = "1.0.25"
replace_with     = "0.1.8"
serde            = "1.0.228"
serde_json       = "1.0.149"
strum            = "0.28.0"
syn              = "2.0.117"
toml             = "0.9.8"
tracing          = "0.1.44"
unicode-ident    = "1.0.24"
zutil-logger     = "0.1.0"

[workspace.lints]

rust.unexpected_cfgs = { check-cfg = ['cfg(rust_analyzer)'], level = "warn" }

rust.unused_crate_dependencies = "warn"

clippy.nursery  = { level = "warn", priority = -1 }
clippy.pedantic = { level = "warn", priority = -1 }

clippy.undocumented_unsafe_blocks = "warn"
clippy.unnecessary_self_imports   = "warn"

# Style
clippy.match_bool         = "allow"
clippy.option_if_let_else = "allow"
clippy.similar_names      = "allow"
clippy.single_match_else  = "allow"
clippy.struct_field_names = "allow"

# Misc
clippy.empty_enums                  = "allow"
clippy.items-after-statements       = "allow"
clippy.unnecessary_debug_formatting = "allow"
clippy.wildcard_imports             = "allow"

# TODO:
clippy.large_enum_variant = "allow"
clippy.missing_errors_doc = "allow"
clippy.missing_panics_doc = "allow"
clippy.too_many_lines     = "allow"

[profile.profiling]
inherits = "release"
debug    = "line-tables-only"

[profile.release]
trim-paths = "all"
strip      = true
