[package]
name        = "rustidy-ast-literal"
edition     = { workspace = true }
description = { workspace = true }
license     = { workspace = true }
version     = { workspace = true }
repository  = { workspace = true }
publish     = { workspace = true }

[dependencies]

# Workspace
rustidy-ast-tokens = { workspace = true }
rustidy-format     = { workspace = true }
rustidy-macros     = { workspace = true }
rustidy-parse      = { workspace = true }
rustidy-print      = { workspace = true }
rustidy-util       = { workspace = true }

app-error     = { workspace = true }
derive_more   = { features = ["full"], workspace = true }
serde         = { workspace = true }
strum         = { features = ["derive"], workspace = true }
tracing       = { workspace = true }
unicode-ident = { workspace = true }

[lints]
workspace = true
