[package]
name        = "rustidy-ast-token"
edition     = { workspace = true }
description = { workspace = true }
license     = { workspace = true }
version     = { workspace = true }
repository  = { workspace = true }
publish     = { workspace = true }

[dependencies]

# Workspace
format = { workspace = true }
parse  = { workspace = true }
print  = { workspace = true }
util   = { workspace = true }

app-error     = { workspace = true }
derive_more   = { features = ["full"], workspace = true }
serde         = { workspace = true }
tracing       = { workspace = true }
unicode-ident = { workspace = true }

[lints]
workspace = true
