[package]
name    = "rustidy-ast-tokens"
version = "0.1.0"
edition = "2024"

[dependencies]

# Workspace
rustidy-ast-util = { workspace = true }
rustidy-format   = { workspace = true }
rustidy-parse    = { workspace = true }
rustidy-print    = { workspace = true }
rustidy-util     = { workspace = true }

app-error     = { workspace = true }
derive_more   = { features = ["full"], workspace = true }
serde         = { workspace = true }
unicode-ident = { workspace = true }

[lints]
workspace = true
