[package]
name        = "rustidy-ast-tokens"
edition     = { workspace = true }
description = { workspace = true }
license     = { workspace = true }
version     = { workspace = true }
repository  = { workspace = true }
publish     = { workspace = true }

[dependencies]

# Workspace
rustidy-format = { workspace = true }
rustidy-parse  = { workspace = true }
rustidy-print  = { workspace = true }
rustidy-util   = { workspace = true }

app-error     = { workspace = true }
derive_more   = { features = ["full"], workspace = true }
serde         = { workspace = true }
tracing       = { workspace = true }
unicode-ident = { workspace = true }

[lints]
workspace = true
