[package]
name    = "rustidy-ast-util"
version = "0.1.0"
edition = "2024"

[dependencies]

# Workspace
rustidy-format = { workspace = true }
rustidy-parse  = { workspace = true }
rustidy-print  = { workspace = true }
rustidy-util   = { workspace = true }

app-error     = { workspace = true }
derive_more   = { features = ["full"], workspace = true }
either        = { workspace = true }
itertools     = { workspace = true }
serde         = { workspace = true }
strum         = { workspace = true }
tracing       = { workspace = true }
unicode-ident = { workspace = true }

[lints]
workspace = true
