[package]
name        = "rustidy-ast-util"
edition     = { workspace = true }
description = { workspace = true }
license     = { workspace = true }
version     = { workspace = true }
repository  = { workspace = true }
publish     = { workspace = true }

[dependencies]

# Workspace
format = { workspace = true }
parse  = { workspace = true }
print  = { workspace = true }
util   = { workspace = true }

app-error    = { workspace = true }
derive_more  = { features = ["full"], workspace = true }
either       = { workspace = true }
itertools    = { workspace = true }
replace_with = { workspace = true }
serde        = { workspace = true }
strum        = { workspace = true }
tracing      = { workspace = true }

[lints]
workspace = true
