[package]
name        = "rustidy-ast"
edition     = { workspace = true }
description = { workspace = true }
license     = { workspace = true }
version     = { workspace = true }
repository  = { workspace = true }
publish     = { workspace = true }

[dependencies]

# Workspace
rustidy-ast-literal = { workspace = true }
rustidy-ast-util    = { workspace = true }
rustidy-format      = { workspace = true }
rustidy-parse       = { workspace = true }
rustidy-print       = { workspace = true }
rustidy-util        = { workspace = true }

app-error    = { workspace = true }
derive_more  = { features = ["full"], workspace = true }
either       = { workspace = true }
itertools    = { workspace = true }
replace_with = { workspace = true }
serde        = { features = ["derive", "unstable"], workspace = true }
strum        = { workspace = true }
tracing      = { workspace = true }

[lints]
workspace = true
