[package]
name        = "rustidy-ast"
edition     = { workspace = true }
description = { workspace = true }
license     = { workspace = true }
version     = { workspace = true }
repository  = { workspace = true }
publish     = { workspace = true }

[dependencies]

# Workspace
ast-literal = { workspace = true }
ast-token   = { workspace = true }
ast-util    = { workspace = true }
format      = { workspace = true }
parse       = { workspace = true }
print       = { workspace = true }
util        = { workspace = true }

app-error    = { workspace = true }
derive_more  = { features = ["full"], workspace = true }
either       = { workspace = true }
itertools    = { workspace = true }
replace_with = { workspace = true }
serde        = { features = ["derive", "unstable"], workspace = true }
strum        = { workspace = true }
tracing      = { workspace = true }

[lints]
workspace = true
