[package]
edition     = { workspace = true }
name        = "rustidy-bin"
description = { workspace = true }
license     = { workspace = true }
version     = { workspace = true }
repository  = { workspace = true }
publish     = { workspace = true }

[[bin]]
name = "rustidy"
path = "src/main.rs"

[dependencies]

# Workspace
rustidy          = { workspace = true }
rustidy-ast      = { workspace = true }
rustidy-ast-util = { workspace = true }
rustidy-format   = { workspace = true }
rustidy-print    = { workspace = true }
rustidy-util     = { workspace = true }

app-error    = { workspace = true }
clap         = { features = ["derive"], workspace = true }
toml         = { workspace = true }
tracing      = { workspace = true }
zutil-logger = { workspace = true }

[lints]
workspace = true
