[package]
name    = "rustidy-cargo"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "cargo-rustidy"
path = "src/main.rs"

[dependencies]

# Workspace
rustidy-format = { workspace = true }
rustidy-macros = { workspace = true }
rustidy-util   = { workspace = true }

app-error      = { workspace = true }
cargo_metadata = { workspace = true }
clap           = { features = ["derive"], workspace = true }
clap-cargo     = { workspace = true }
convert_case   = { workspace = true }
derive_more    = { features = ["full"], workspace = true }
either         = { workspace = true }
itertools      = { workspace = true }
serde          = { workspace = true }
strum          = { workspace = true }
tracing        = { workspace = true }
zutil-logger   = { workspace = true }

[lints]
workspace = true
