[package]
name    = "rustidy-cargo"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "cargo-rustidy"
path = "src/main.rs"

[dependencies]

app-error      = { workspace = true }
cargo_metadata = { workspace = true }
clap           = { features = ["derive"], workspace = true }
clap-cargo     = { workspace = true }
tracing        = { workspace = true }
zutil-logger   = { workspace = true }

[lints]
workspace = true
