[package]
name        = "rustidy-cargo"
edition     = { workspace = true }
description = { workspace = true }
license     = { workspace = true }
version     = { workspace = true }
repository  = { workspace = true }
publish     = { workspace = true }

[[bin]]
name = "cargo-rustidy"
path = "src/main.rs"

[dependencies]

app-error      = { workspace = true }
cargo_metadata = { workspace = true }
clap           = { features = ["derive"], workspace = true }
clap-cargo     = { workspace = true }
tracing        = { workspace = true }
zutil-logger   = { workspace = true }

[lints]
workspace = true
