[package]
name    = "rustidy-format"
version = "0.1.0"
edition = "2024"

[dependencies]

# Workspace
rustidy-macros = { workspace = true }
rustidy-util   = { workspace = true }

extend       = { workspace = true }
itertools    = { workspace = true }
replace_with = { workspace = true }
strum        = { workspace = true }

[lints]
workspace = true
