[package]
name        = "rustidy-format"
edition     = { workspace = true }
description = { workspace = true }
license     = { workspace = true }
version     = { workspace = true }
repository  = { workspace = true }
publish     = { workspace = true }

[dependencies]

# Workspace
rustidy-macros = { workspace = true }
rustidy-util   = { workspace = true }

arcstr       = { workspace = true }
extend       = { workspace = true }
itertools    = { workspace = true }
replace_with = { workspace = true }
strum        = { workspace = true }
tracing      = { workspace = true }

[lints]
workspace = true
