[package]
name    = "rustidy-macros"
version = "0.1.0"
edition = "2024"

[lib]
proc-macro = true

[dependencies]

app-error    = { workspace = true }
convert_case = { workspace = true }
darling      = { workspace = true }
derive_more  = { features = ["full"], workspace = true }
itertools    = { workspace = true }
proc-macro2  = { workspace = true }
quote        = { workspace = true }
syn          = { workspace = true }

[lints]
workspace = true
