[package]
name        = "rustidy-macros"
edition     = { workspace = true }
description = { workspace = true }
license     = { workspace = true }
version     = { workspace = true }
repository  = { workspace = true }
publish     = { workspace = true }

[lib]
proc-macro = true

[dependencies]

app-error    = { workspace = true }
convert_case = { workspace = true }
darling      = { workspace = true }
derive_more  = { features = ["full"], workspace = true }
extend       = { workspace = true }
itertools    = { workspace = true }
proc-macro2  = { workspace = true }
quote        = { workspace = true }
syn          = { workspace = true }

[lints]
workspace = true
