[package]
name    = "rustidy-parse"
version = "0.1.0"
edition = "2024"

[features]
parse-debug-name  = []
flamegraph-traces = ["flate2"]

[dependencies]

# Workspace
rustidy-macros = { workspace = true }
rustidy-util   = { workspace = true }

app-error   = { workspace = true }
arcstr      = { workspace = true }
derive_more = { features = ["full"], workspace = true }
either      = { workspace = true }
flate2      = { optional = true, workspace = true }
tracing     = { workspace = true }

[lints]
workspace = true
