[package]
name        = "rustidy-parse"
edition     = { workspace = true }
description = { workspace = true }
license     = { workspace = true }
version     = { workspace = true }
repository  = { workspace = true }
publish     = { workspace = true }

[features]
parse-debug-name  = []
flamegraph-traces = ["flate2"]

[dependencies]

# Workspace
macros = { workspace = true }
util   = { workspace = true }

app-error   = { workspace = true }
arcstr      = { workspace = true }
derive_more = { features = ["full"], workspace = true }
flate2      = { optional = true, workspace = true }
tracing     = { workspace = true }

[lints]
workspace = true
