[package]
name        = "rustidy-print"
edition     = { workspace = true }
description = { workspace = true }
license     = { workspace = true }
version     = { workspace = true }
repository  = { workspace = true }
publish     = { workspace = true }

[dependencies]

# Workspace
rustidy-macros = { workspace = true }
rustidy-util   = { workspace = true }

arcstr = { workspace = true }

[lints]
workspace = true
