[package]
name    = "rustidy-util"
version = "0.1.0"
edition = "2024"

[dependencies]

arcstr      = { workspace = true }
derive_more = { features = ["full"], workspace = true }
extend      = { workspace = true }
serde       = { features = ["derive", "rc"], workspace = true }
strum       = { features = ["derive"], workspace = true }

[lints]
workspace = true
