[package]
name        = "rustidy-util"
edition     = { workspace = true }
description = { workspace = true }
license     = { workspace = true }
version     = { workspace = true }
repository  = { workspace = true }
publish     = { workspace = true }

[dependencies]

arcstr      = { workspace = true }
derive_more = { features = ["full"], workspace = true }
extend      = { workspace = true }
serde       = { features = ["derive", "rc"], workspace = true }
strum       = { features = ["derive"], workspace = true }

[lints]
workspace = true
