[package]
edition     = { workspace = true }
name        = "rustidy"
description = { workspace = true }
license     = { workspace = true }
version     = { workspace = true }
repository  = { workspace = true }
publish     = { workspace = true }

[dependencies]

# Workspace
rustidy-ast    = { workspace = true }
rustidy-format = { workspace = true }
rustidy-parse  = { workspace = true }
rustidy-util   = { workspace = true }

app-error = { workspace = true }

[lints]
workspace = true
