[package]
name        = "rustidy"
edition     = { workspace = true }
description = { workspace = true }
license     = { workspace = true }
version     = { workspace = true }
repository  = { workspace = true }
publish     = { workspace = true }

[[bin]]
name = "rustidy"
path = "bin/rustidy/main.rs"

[[bin]]
name = "cargo-rustidy"
path = "bin/cargo-rustidy/main.rs"

[dependencies]

# Workspace
ast         = { workspace = true }
ast-literal = { workspace = true }
ast-util    = { workspace = true }
format      = { workspace = true }
parse       = { workspace = true }
print       = { workspace = true }
util        = { workspace = true }

app-error      = { workspace = true }
cargo_metadata = { workspace = true }
clap           = { features = ["derive"], workspace = true }
clap-cargo     = { workspace = true }
toml           = { workspace = true }
tracing        = { workspace = true }
zutil-logger   = { workspace = true }

[dev-dependencies]
assert-json-diff = { workspace = true }
difference       = { workspace = true }
serde            = { features = ["derive", "unstable"], workspace = true }
serde_json       = { features = ["unbounded_depth"], workspace = true }

[lints]
workspace = true
